# OpenSource-GPU-Architecture

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .replit  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  Makefile.cocotb.mk  Makefile.sv  Makefile.vlsi  README.md  SECURITY.md  build.sh  iverilog_dump_atomic_add.sv  iverilog_dump_matadd.sv  mkdocs.yml  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  server.py  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: bench.yml  build-toolchain.yml  commercial.yml  coverage.yml  docs.yml  flow.yml  formal.yml  lint.yml  refsim.yml  release.yml  sim.yml  supply-chain.yml  test.yml  tt.yml
bench/: __init__.py  run_all.py
bench/kernels/scalar_inc/: host.py  kernel.asm
bench/kernels/vecadd/: host.py  kernel.asm
containers/toolchain/: Dockerfile  README.md
docs/: CHANGELOG.md  DESIGN_FIXES.md  changelog.md  cocotb-overview.md  index.md  setup-verilog-simulation.md
docs/isa/: reference.md
docs/modules/: README.md  alu.md  controller.md  core.md  dcr.md  decoder.md  dispatch.md  fetcher.md  gpu.md  lsu.md  pc.md  registers.md  scheduler.md
docs/refsim/: index.md
docs/report/: 00-executive-overview.md  01-repository-structure.md  02-architecture-and-execution.md  03-build-and-test-workflow.md  04-risks-open-questions.md  05-matadd-trace-walkthrough.md  06-matmul-trace-walkthrough.md  README.md
docs/tooling/: codegen.md  difftest.md
flow/: README.md
flow/commercial/: Makefile  README.md
flow/fpga/common/: gpu_fpga_top.sv
flow/fpga/ecp5/: Makefile  gpu_ulx3s.lpf
flow/fpga/ice40/: Makefile  gpu_hx8k.pcf
flow/fpga/programs/: matadd_min.hex  matadd_min_data.hex
flow/openlane2/: README.md  config.json
flow/synth/: Makefile  synth_check.ys
flow/tt/: Makefile  README.md  config.json
flow/tt/docs/: info.md
formal/: README.md
formal/dcr/: dcr.sby  dcr_formal_top.sv  dcr_props.sv
formal/dcr/dcr/: dcr.xml  logfile.txt  status.sqlite
fpga/common/: gpu_fpga_wrapper.sv
fpga/intel/: gpu_soc.sdc
fpga/xilinx/: gpu_soc.xdc
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: Architecture.jsx  Home.jsx  Memory.jsx  Simulate.jsx
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/changelog/: index.html
latest/cocotb-overview/: index.html
latest/isa/: instructions.yaml
latest/isa/reference/: index.html
latest/modules/: index.html
latest/modules/alu/: index.html
latest/modules/controller/: index.html
latest/modules/core/: index.html
latest/modules/dcr/: index.html
latest/modules/decoder/: index.html
latest/modules/dispatch/: index.html
latest/modules/fetcher/: index.html
latest/modules/gpu/: index.html
latest/modules/lsu/: index.html
latest/modules/pc/: index.html
latest/modules/registers/: index.html
latest/modules/scheduler/: index.html
latest/refsim/: index.html
latest/report/: index.html
latest/report/00-executive-overview/: index.html
latest/search/: search_index.json
latest/setup-verilog-simulation/: index.html
latest/tooling/codegen/: index.html
sim/cppref/: CMakeLists.txt  README.md
sim/cppref/include/opengpu/: core.hpp  isa_table.hpp  loader.hpp  memory.hpp  thread.hpp  trace.hpp
sim/cppref/src/: core.cpp  loader.cpp  main.cpp  memory.cpp  thread.cpp  trace.cpp
sim/cppref/tests/: test_alu.cpp  test_decode.cpp  test_kernel.cpp
sim/memory/: CMakeLists.txt  __init__.py  dram_bfm.py
sim/memory/configs/: ddr4_2400.yaml  hbm2_1024.yaml
src/: alu.sv  alu_optimized.sv  atomic_unit.sv  barrier.sv  cache.sv  clock_reset_controller.sv  coalescer.sv  command_processor.sv  controller.sv  core.sv  dcache.sv  dcr.sv  debug_controller.sv  decoder.sv  decoder_optimized.sv  dispatch.sv  display_controller.sv  divergence.sv  dma_engine.sv  ecc_controller.sv  fetcher.sv  fetcher_cached.sv  framebuffer.sv  geometry_engine.sv  gpu.sv  gpu_soc.sv  gpu_soc_tb_wrapper.sv  icache.sv  info.yaml  interrupt_controller.sv  load_store_queue.sv  lsu.sv  lsu_cached.sv  memory_controller.sv  pc.sv  pcie_controller.sv  perf_counters.sv  pipelined_fetcher.sv  pipelined_scheduler.sv  power_management.sv  (+12 more)
test/: VERIFICATION_PLAN.md  test_atomic_add.py  test_atomic_cas.py  test_atomic_unit.py  test_barrier.py  test_cache.py  test_clock_reset.py  test_coalescer.py  test_command_processor.py  test_dcache.py  test_display_controller.py  test_divergence.py  test_enterprise_features.py  test_enterprise_validation.py  test_geometry_engine.py  test_gpu_e2e.py  test_gpu_soc.py  test_icache.py  test_interrupt_controller.py  test_matadd.py  test_matmul.py  test_pcie_controller.py  test_perf_counters.py  test_pipeline.py  test_production_features.py  test_production_modules.py  test_rasterizer.py  test_realtime_simulator.py  test_render_output_unit.py  test_shared_memory.py  test_tt_adapter.py  test_warp_scheduler.py
test/helpers/: debug.py  format.py  logger.py  memory.py  setup.py  simulation_setup.py
test/memory/: test_dram_bfm.py
tools/: versions.env
tools/asm/: asm.py  opengpu.asm
tools/codegen/: README.md  __init__.py  isa_loader.py  regen.py  render_isa_md.py
tools/difftest/: __init__.py
tools/lint/: pyslang_check.py  verible.fmt  verible.rules
tools/opengpu_tools/: __init__.py
tools/opengpu_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/tinygrad_opengpu/: __init__.py  codegen.py
visualization/: core.dig  gpu.dig  lsu.dig  pc.dig  registers.dig  splitter40-10.dig  thread.dig  threads.dig
visualization/src/: README.md  alu.sv  controller-data.sv  controller-program.sv  core.sv  dcr.sv  decoder.sv  dispatch.sv  fetcher.sv  gpu.sv  lsu.sv  pc.sv  registers.sv  scheduler.sv  splitter144.sv
vlsi/constraints/: gpu_soc.sdc
vlsi/dft/: scan_config.tcl
vlsi/floorplan/: gpu_soc.fp
vlsi/power/: gpu_soc.upf
(+20 files in other folders)
